# StellarPay

./: .gitignore  README.md  environments.toml  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
contracts/privacy-payment/: Cargo.toml
contracts/privacy-payment/src/: lib.rs
src/: App.tsx  index.css  main.tsx
src/components/layout/: Footer.tsx  Header.tsx  PageContainer.tsx
src/components/profile/: CreateProfile.tsx
src/components/ui/: badge.tsx  button.tsx  input.tsx
src/components/wallet/: ConnectWallet.tsx  ConnectWalletButton.tsx  WalletInfo.tsx  index.ts
src/contexts/: AuthContext.tsx
src/contracts/privacy-payment/: README.md  package-lock.json  package.json
src/contracts/privacy-payment/src/: README.md  package-lock.json
src/contracts/privacy-payment/src/src/: index.ts
src/hooks/: useToast.ts  useWallet.ts
src/pages/: Dashboard.tsx  Home.tsx  MyPayments.tsx  PaymentPage.tsx
src/providers/: WalletProvider.tsx
src/services/: contract.service.ts
src/types/: contract.types.ts
src/util/: storage.ts  wallet.ts
