[package]
name = "privacy-payment"
version = "0.1.0"
description = "Privacy-preserving payment system with virtual addresses"
edition.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[package.metadata.stellar]
cargo_inherit = true

[lib]
crate-type = ["cdylib"]
doctest = false

[dependencies]
soroban-sdk = "23.0.3"

[dev-dependencies]
soroban-sdk = { version = "23.0.3", features = ["testutils"] }

[features]
default = []
testutils = ["soroban-sdk/testutils"]

[profile.release]
opt-level = "z"
overflow-checks = true
debug = 0
strip = "symbols"
debug-assertions = false
panic = "abort"
codegen-units = 1
lto = true
